--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "raj-gaurav.github.io",
+  "name": "om-rajgaurav.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://om-rajgaurav.github.io/",
+  "homepage": "https://om-rajgaurav.github.io/myreactwebsite",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
